<resources>
    <string name="google_maps_key">AIzaSyDa-RfLkfgnG6asub1WrpJ0k9fPPVPdop4</string>

    <string name="app_name">WeatherApp</string>
    <string name="history">History</string>
    <string name="map">Map</string>
    <string name="error_getting_region">Error getting region</string>
    <string name="loading_region_details">Loading region details</string>
    <string name="loading_weather_details">Loading weather details</string>
    <string name="weather_condition">Weather condition</string>
    <string name="set_random_locations_from">Set random locations from</string>
    <string name="generator">generator</string>
    <string name="server">server</string>
</resources>
