<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map">
    </com.google.android.gms.maps.MapView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="4dp"
        android:layout_gravity="center|top"
        app:cardBackgroundColor="@color/colorAccentLight"
        app:cardCornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/set_random_locations_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:text="@string/generator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Switch
                    android:id="@+id/switch_locations_source"
                    android:thumbTint="@drawable/selector_switch_thumb"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:text="@string/server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_refresh_locations"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="68dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="168dp">

        <ProgressBar
            android:indeterminateTint="@color/colorAccentLight"
            android:layout_gravity="center"
            android:id="@+id/pb_refresh_locations"
            android:layout_width="26dp"
            android:layout_height="26dp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_refresh_locations"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginRight="6dp"
        android:src="@drawable/autorenew"
        app:backgroundTint="@color/colorPrimaryDark"
        app:fabSize="normal" />

</FrameLayout>