<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/pb_region_loading_container"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:indeterminate="true"
                    android:id="@+id/pb_region_name_loading"
                    android:layout_width="36dp"
                    android:layout_height="36dp" />

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:text="@string/loading_region_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:id="@+id/tv_region_name"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="6dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/pb_weather_loading_container"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:indeterminate="true"
                    android:id="@+id/pb_weather_loading"
                    android:layout_width="36dp"
                    android:layout_height="36dp" />

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/loading_weather_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/weather_container_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_temperature"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="Temperature: 21 Celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <View
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/weather_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginLeft="4dp"
                        android:id="@+id/tv_weather_condition_main"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:text="Clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginLeft="4dp"
                        android:id="@+id/tv_weather_condition_description"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        android:text="clear sky"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <View
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <TextView
                    android:layout_marginLeft="4dp"
                    android:id="@+id/tv_presure"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="Presure: 45 ph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <TextView
                    android:layout_marginLeft="4dp"
                    android:id="@+id/tv_wind_speed"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="Wind speed: 32 ms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>